--- a/taixinkanghu/src/main/res/layout/activity_worker_info.xml
+++ b/taixinkanghu/src/main/res/layout/activity_worker_info.xml
@@ -30,164 +30,164 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content">
 
-                    <LinearLayout
-                        android:id="@id/up"
-                        android:layout_width="fill_parent"
-                        android:layout_height="65.0dip"
-                        android:background="@color/main_color"
-                        android:gravity="bottom"
-                        android:orientation="vertical"
-                        android:paddingBottom="5.0dip"
-                        android:paddingLeft="130.0dip">
+                    <!--<LinearLayout-->
+                        <!--android:id="@id/up"-->
+                        <!--android:layout_width="fill_parent"-->
+                        <!--android:layout_height="65.0dip"-->
+                        <!--android:background="@color/main_color"-->
+                        <!--android:gravity="bottom"-->
+                        <!--android:orientation="vertical"-->
+                        <!--android:paddingBottom="5.0dip"-->
+                        <!--android:paddingLeft="130.0dip">-->
 
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal">
+                        <!--<LinearLayout-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:gravity="center_vertical"-->
+                            <!--android:orientation="horizontal">-->
 
-                            <TextView
-                                android:id="@id/name"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="8.0dip"
-                                android:text="王瑾瑜"
-                                android:textColor="#ffffffff"
-                                android:textSize="18.0sp" />
+                            <!--<TextView-->
+                                <!--android:id="@id/name"-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:layout_marginRight="8.0dip"-->
+                                <!--android:text="王瑾瑜"-->
+                                <!--android:textColor="#ffffffff"-->
+                                <!--android:textSize="18.0sp" />-->
 
-                            <TextView
-                                android:id="@id/level_name"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:singleLine="true"
-                                android:text="中级护理员"
-                                android:textColor="#ddffffff"
-                                android:textSize="14.0sp" />
-                        </LinearLayout>
+                            <!--<TextView-->
+                                <!--android:id="@id/level_name"-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:singleLine="true"-->
+                                <!--android:text="中级护理员"-->
+                                <!--android:textColor="#ddffffff"-->
+                                <!--android:textSize="14.0sp" />-->
+                        <!--</LinearLayout>-->
 
-                        <TextView
-                            android:id="@id/worker_id"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="工号：5124"
-                            android:textColor="#ddffffff"
-                            android:textSize="14.0sp" />
-                    </LinearLayout>
+                        <!--<TextView-->
+                            <!--android:id="@id/worker_id"-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:text="工号：5124"-->
+                            <!--android:textColor="#ddffffff"-->
+                            <!--android:textSize="14.0sp" />-->
+                    <!--</LinearLayout>-->
 
-                    <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="65.0dip"
-                        android:layout_below="@id/up"
-                        android:orientation="vertical"
-                        android:paddingLeft="130.0dip"
-                        android:paddingTop="5.0dip">
+                    <!--<LinearLayout-->
+                        <!--android:layout_width="fill_parent"-->
+                        <!--android:layout_height="65.0dip"-->
+                        <!--android:layout_below="@id/up"-->
+                        <!--android:orientation="vertical"-->
+                        <!--android:paddingLeft="130.0dip"-->
+                        <!--android:paddingTop="5.0dip">-->
 
-                        <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal">
+                        <!--<LinearLayout-->
+                            <!--android:layout_width="fill_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:gravity="center_vertical"-->
+                            <!--android:orientation="horizontal">-->
 
-                            <TextView
-                                android:id="@id/gender"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="男"
-                                android:textColor="@color/text_color_gray"
-                                android:textSize="14.0sp" />
+                            <!--<TextView-->
+                                <!--android:id="@id/gender"-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:text="男"-->
+                                <!--android:textColor="@color/text_color_gray"-->
+                                <!--android:textSize="14.0sp" />-->
 
-                            <TextView
-                                android:layout_width="0.5dip"
-                                android:layout_height="13.0dip"
-                                android:layout_marginLeft="3.0dip"
-                                android:layout_marginRight="3.0dip"
-                                android:background="@color/divider_color" />
+                            <!--<TextView-->
+                                <!--android:layout_width="0.5dip"-->
+                                <!--android:layout_height="13.0dip"-->
+                                <!--android:layout_marginLeft="3.0dip"-->
+                                <!--android:layout_marginRight="3.0dip"-->
+                                <!--android:background="@color/divider_color" />-->
 
-                            <TextView
-                                android:id="@id/workYear"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="2年护理经验"
-                                android:textColor="@color/text_color_gray"
-                                android:textSize="14.0sp" />
+                            <!--<TextView-->
+                                <!--android:id="@id/workYear"-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:text="2年护理经验"-->
+                                <!--android:textColor="@color/text_color_gray"-->
+                                <!--android:textSize="14.0sp" />-->
 
-                            <TextView
-                                android:layout_width="0.5dip"
-                                android:layout_height="13.0dip"
-                                android:layout_marginLeft="3.0dip"
-                                android:layout_marginRight="3.0dip"
-                                android:background="@color/divider_color" />
+                            <!--<TextView-->
+                                <!--android:layout_width="0.5dip"-->
+                                <!--android:layout_height="13.0dip"-->
+                                <!--android:layout_marginLeft="3.0dip"-->
+                                <!--android:layout_marginRight="3.0dip"-->
+                                <!--android:background="@color/divider_color" />-->
 
-                            <TextView
-                                android:id="@id/chinese_level"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="普通话一般"
-                                android:textColor="@color/text_color_gray"
-                                android:textSize="14.0sp" />
-                        </LinearLayout>
+                            <!--<TextView-->
+                                <!--android:id="@id/chinese_level"-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:text="普通话一般"-->
+                                <!--android:textColor="@color/text_color_gray"-->
+                                <!--android:textSize="14.0sp" />-->
+                        <!--</LinearLayout>-->
 
-                        <LinearLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="3.0dip"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal">
+                        <!--<LinearLayout-->
+                            <!--android:layout_width="fill_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_marginTop="3.0dip"-->
+                            <!--android:gravity="center_vertical"-->
+                            <!--android:orientation="horizontal">-->
 
-                            <TextView
-                                android:id="@id/age"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="31岁"
-                                android:textColor="@color/text_color_gray"
-                                android:textSize="14.0sp" />
+                            <!--<TextView-->
+                                <!--android:id="@id/age"-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:text="31岁"-->
+                                <!--android:textColor="@color/text_color_gray"-->
+                                <!--android:textSize="14.0sp" />-->
 
-                            <TextView
-                                android:layout_width="0.5dip"
-                                android:layout_height="13.0dip"
-                                android:layout_marginLeft="3.0dip"
-                                android:layout_marginRight="3.0dip"
-                                android:background="@color/divider_color" />
+                            <!--<TextView-->
+                                <!--android:layout_width="0.5dip"-->
+                                <!--android:layout_height="13.0dip"-->
+                                <!--android:layout_marginLeft="3.0dip"-->
+                                <!--android:layout_marginRight="3.0dip"-->
+                                <!--android:background="@color/divider_color" />-->
 
-                            <TextView
-                                android:id="@id/province"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="吉林"
-                                android:textColor="@color/text_color_gray"
-                                android:textSize="14.0sp" />
+                            <!--<TextView-->
+                                <!--android:id="@id/province"-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:text="吉林"-->
+                                <!--android:textColor="@color/text_color_gray"-->
+                                <!--android:textSize="14.0sp" />-->
 
-                            <TextView
-                                android:layout_width="0.5dip"
-                                android:layout_height="13.0dip"
-                                android:layout_marginLeft="3.0dip"
-                                android:layout_marginRight="3.0dip"
-                                android:background="@color/divider_color" />
+                            <!--<TextView-->
+                                <!--android:layout_width="0.5dip"-->
+                                <!--android:layout_height="13.0dip"-->
+                                <!--android:layout_marginLeft="3.0dip"-->
+                                <!--android:layout_marginRight="3.0dip"-->
+                                <!--android:background="@color/divider_color" />-->
 
-                            <TextView
-                                android:id="@id/nation"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="汉族"
-                                android:textColor="@color/text_color_gray"
-                                android:textSize="14.0sp" />
+                            <!--<TextView-->
+                                <!--android:id="@id/nation"-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:text="汉族"-->
+                                <!--android:textColor="@color/text_color_gray"-->
+                                <!--android:textSize="14.0sp" />-->
 
-                            <TextView
-                                android:layout_width="0.5dip"
-                                android:layout_height="13.0dip"
-                                android:layout_marginLeft="3.0dip"
-                                android:layout_marginRight="3.0dip"
-                                android:background="@color/divider_color" />
+                            <!--<TextView-->
+                                <!--android:layout_width="0.5dip"-->
+                                <!--android:layout_height="13.0dip"-->
+                                <!--android:layout_marginLeft="3.0dip"-->
+                                <!--android:layout_marginRight="3.0dip"-->
+                                <!--android:background="@color/divider_color" />-->
 
-                            <TextView
-                                android:id="@id/education"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="大学本科"
-                                android:textColor="@color/text_color_gray"
-                                android:textSize="14.0sp" />
-                        </LinearLayout>
-                    </LinearLayout>
+                            <!--<TextView-->
+                                <!--android:id="@id/education"-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:text="大学本科"-->
+                                <!--android:textColor="@color/text_color_gray"-->
+                                <!--android:textSize="14.0sp" />-->
+                        <!--</LinearLayout>-->
+                    <!--</LinearLayout>-->
 
                     <com.taixinkanghu.widget.circleimageview.CircleImageView
                         app:border_color="#ff33c5b8"
